# moire_metrology

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add_material.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.rst  changelog.md  conf.py  custom-materials.md  examples.md  index.md  installation.md  quickstart.md  references.md  requirements.txt  theory.md
docs/dev/: mean_displacement_constraint.md  nonlinear_elasticity.md
examples/: _cli.py  bilayer_graphene_relaxation.py  bilayer_relaxation.py  hbn_relaxation.py  multilayer_penetration.py  spatial_strain_extraction.py  spatial_strain_relaxation.py  strain_extraction_and_pinning.py  tmd_heterostructure.py
examples/data/: mose2_wse2_h.toml  mose2_wse2_polylines.csv
src/moire_metrology/: __init__.py  _elasticity_nl.py  discretization.py  energy.py  gsfe.py  interfaces.py  io.py  lattice.py  materials.py  mean_constraint.py  mesh.py  pinning.py  plotting.py  result.py  solver.py
src/moire_metrology/multilayer/: __init__.py  stack.py
src/moire_metrology/strain/: __init__.py  extraction.py  fringe.py  polynomial.py  support.py
tests/: test_bilayer_and_tdbg.py  test_constrained.py  test_custom_mesh.py  test_discretization.py  test_elastic_units.py  test_elasticity_nl.py  test_gsfe.py  test_hex_periodic_mesh.py  test_lattice.py  test_mean_constraint.py  test_mesh.py  test_multilayer.py  test_solver.py  test_strain.py  test_strain_spatial.py  test_toml_loader.py
